--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="nav__menu">
                     <ul class="nav__list">
 
-                        
+
                         <li class="nav__item">
                             <a href="#home" class="nav__link active-link">
                                 <i class="bx bx-home-alt"></i>
@@ -104,16 +104,13 @@
                         <img src="assets/img/portfolio_img.png" alt="" class="home__img">
                     </div>
                     <div class="home__social">
-                        <a href="https://www.instagram.com/rowshen.art/" class="home__social-link">
+                        <a href="https://www.instagram.com/rowsen.art/" class="home__social-link">
                             <i class="bx bxl-instagram"></i>
                         </a>
-                        <a href="https://github.com/rowshenmuhyyew/" class="home__social-link">
+                        <a href="https://github.com/rowsenmuhyyew/" class="home__social-link">
                             <i class="bx bxl-github"></i>
                         </a>
-                        <a href="https://twitter.com/rowshenmuhyyew" class="home__social-link">
-                            <i class="bx bxl-twitter"></i>
-                        </a>
-                        <a href="https://www.linkedin.com/in/oraz-gulchayev-797127235/" class="home__social-link">
+                        <a href="https://www.linkedin.com/in/rowsen-muhyyew-958b95253/" class="home__social-link">
                             <i class="bx bxl-linkedin"></i>
                         </a>
                     </div>
@@ -612,19 +609,15 @@
                 </ul>
 
                 <ul class="footer__social">
-                    <a href="https://github.com/orazgulcayew" target="_blank" class="footer__social-link">
+                    <a href="https://github.com/rowsenmuhyyew" target="_blank" class="footer__social-link">
                         <i class="bx bxl-github"></i>
                     </a>
 
-                    <a href="https://instagram.com/orazgulcayew" target="_blank" class="footer__social-link">
+                    <a href="https://instagram.com/rowsen.art" target="_blank" class="footer__social-link">
                         <i class="bx bxl-instagram"></i>
                     </a>
 
-                    <a href="https://twitter.com/orazgulcayew" target="_blank" class="footer__social-link">
-                        <i class="bx bxl-twitter"></i>
-                    </a>
-
-                    <a href="https://www.linkedin.com/in/oraz-gulchayev-797127235/" target="_blank" class="footer__social-link">
+                    <a href="https://www.linkedin.com/in/rowsen-muhyyew-958b95253/" target="_blank" class="footer__social-link">
                         <i class="bx bxl-linkedin"></i>
                     </a>
                 </ul>
