--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
                        </div>
 
                        <p class="about__description">
-                        I am self-taught UI/UX designer. I prefer using React, because it's power💪.
+                        I am self-taught UI/UX designer.
                         I have done many online/offline projects like Photo editing app, Tracking, E-commerce, Social Media and etc. Most of my projects done by using powerfull development tool Figma🔥
                         Also I've got ability of using many softwares like Photoshop, Illustrator, After Effects (using for logo and illustration animations),
                         Xd, Figma.<br>
-                        My hobby is Sketch art🎨, every saturday or sunday is artday for me. You can find my artworks on <a class="insta-link" href="https://www.instagram.com/orazgulcayew/">Instagram.</a>
+                        My hobby is Sketch art🎨, every saturday or sunday is artday for me. You can find my artworks on <a class="insta-link" href="https://www.instagram.com/rowsen.art/">Instagram.</a>
                         
                        </p>
 
